Fix black keys visual text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,13 @@ a.icon svg {
   margin:0 0 0 var(--piano-key-margin);
   z-index:2;
   color: var(--piano-color-primary);
-  background:linear-gradient(45deg,var(--piano-color-secondary) 50%,#000 100%)
+  background:linear-gradient(45deg,var(--piano-color-secondary) 50%,#000 100%);
+}
+.piano .key.black span {
+  padding: 1em 0;
+}
+.piano .key.black p {
+  padding: 0;
 }
 
 .piano .key[active=true] {
